--- a/LaTeX/ThesisBuilder/Chapter2.tex
+++ b/LaTeX/ThesisBuilder/Chapter2.tex
@@ -41,13 +41,13 @@ violence. Consider two statements from cable TV news in 2012 that both feature t
 word ``attack'':
 \begin{exe} \ex Because we want you to pay for your own birth control,
   that's an \emph{attack} on your womb like we're flying a predator drone over your
-  fallopian tubes and calling in a strike?\footnote{Adam Carolla on \emph{The
-  O'Reilly Factor}, FOX News, September 10, 2012; \url{https://goo.gl/jVBsqH}}
+  fallopian tubes and calling in a strike?\footnote{\footnotesize Adam Carolla on \emph{The
+  O'Reilly Factor}, FOX News, September 10, 2012; https://goo.gl/jVBsqH}
   \label{ex:carolla} 
   \ex John McCain and his allies have been trying to turn the
   Benghazi attacks into a political scandal for the president since
-  September.\footnote{Chris Matthews on \emph{Hardball with Chris Matthews},
-  MSNBC, November 15, 2012; \url{https://goo.gl/Pfs4Sc}}
+  September.\footnote{\footnotesize Chris Matthews on \emph{Hardball with Chris Matthews},
+  MSNBC, November 15, 2012; https://goo.gl/Pfs4Sc}
 \label{ex:benghazi-attacks} \end{exe} The first statement refers to political
 efforts to force employers to provide insurance that covers birth control for
 women.  It is metaphorical because the
@@ -311,11 +311,11 @@ the September 17 episode of \emph{Hannity}, Sean Hannity said,
   \ex I want to see Romney {\em hit} harder. I want to see him \ldots take it right to (Obama).
 \end{exe}
 A panelist followed up, telling Hannity, ``If Romney had your passion, if
-Romney had your intelligence, he would have a shot.''\footnote{https://goo.gl/mc8aXk}
+Romney had your intelligence, he would have a shot.''\footnote{\tiny https://goo.gl/mc8aXk}
 Then the next day, a contributor on \emph{The O'Reilly Factor} said,
 \begin{exe}
   \ex Romney is not projecting strength. He put out a statement, he got {\em attacked}, 
-   and he crawled into a hole. He should have kept moving forward with what he was saying.\footnote{https://goo.gl/HJ6BWu} 
+   and he crawled into a hole. He should have kept moving forward with what he was saying.\footnote{\tiny https://goo.gl/HJ6BWu} 
 \end{exe}
 The underdog strategy worked: Romney enjoyed a boost in the polls
 after the first debate. Before the debate, only 29\% of survey respondents
@@ -332,7 +332,7 @@ On September 13, Rachel Maddow described this statement as both ``\emph{attackin
 President Obama and 
 \begin{exe}
   \ex {\em attacking} U.S. diplomatic personnel in the places that were
-being attacked.\footnote{\url{https://goo.gl/QD2SFv}} 
+being attacked.\footnote{\tiny https://goo.gl/QD2SFv} 
 \end{exe}
 Maddow went on to quote a 
 ``senior republican foreign policy adviser'' who said the Romney campaign was
@@ -341,7 +341,7 @@ and now it's just completely blown up.'' On the same day, Chris Matthews
 wondered on \emph{Hardball}, 
 \begin{exe}
   \ex who is pushing that and saying, `release the
-statement, \emph{attack, attack, attack}'?\footnote{\url{https://goo.gl/DQULSG}} 
+statement, \emph{attack, attack, attack}'?\footnote{\tiny https://goo.gl/DQULSG} 
 \end{exe}
 
 Later on MSNBC,
@@ -350,7 +350,7 @@ senate race between Republican Scott Brown and Democrat Elizabeth Warren.
 Maddow cast Warren, the Democrat, as the victim of metaphorical attacks. 
 The controversy began in the first debate when Brown noted 
 that Warren identified herself as a 
-Native American on school applications, but, Brown said, ``You can see that she's not''\footnote{\url{https://www.c-span.org/video/?c4722477/attack-referred-msnbc}}. 
+Native American on school applications, but, Brown said, ``You can see that she's not''\footnote{\tiny https://www.c-span.org/video/?c4722477/attack-referred-msnbc}. 
 Maddow first addressed this event in an interview with Rep. Barney 
 Frank (D-Massachusetts), when she asked him his thoughts about 
 \begin{exe}
@@ -359,7 +359,7 @@ Frank (D-Massachusetts), when she asked him his thoughts about
 Frank said it was a 
 \begin{exe}
   \ex silly \emph{attack} on the fact that she once said she was of Native American 
-  ancestry\footnote{\url{https://archive.org/details/MSNBCW_20120921_040000_The_Rachel_Maddow_Show/start/2400/end/2460}}.
+  ancestry\footnote{\tiny https://archive.org/details/MSNBCW\_20120921\_040000\_The\_Rachel\_Maddow\_Show/start/2400/end/2460}.
 \end{exe}
 %The \emph{attack} was not too silly for Maddow to continue to cover using
 %metaphorical violence. 
@@ -373,7 +373,7 @@ We now consider specific examples of metaphor use in
 2016.  Donald Trump made aggression an explicit character
 feature early on in the primary election campaign, 
 claiming in January 2016, ``I could stand in the middle of Fifth Avenue
-and shoot somebody and I wouldn't lose any voters, OK?''\footnote{\url{https://www.realclearpolitics.com/video/2016/01/23/trump_i_could_stand_in_the_middle_of_fifth_avenue_and_shoot_somebody_and_i_wouldnt_lose_any_voters.html}}
+and shoot somebody and I wouldn't lose any voters, OK?''\footnote{\tiny https://www.realclearpolitics.com/video/2016/01/23/trump\_i\_could\_stand\_in\_the\_middle\_of\_fifth\_avenue\_and\_shoot\_somebody\_and\_i\_wouldnt\_lose\_any\_voters.html}
 Many of Trump's statements against others either originated on Twitter 
 or were echoed on Twitter. These statements were reported in 
 cable news as metaphorical violence. 
@@ -396,7 +396,7 @@ Both CNN and Fox News noted the novelty of having a debate between
 candidates of different genders, and the new experience for Trump of debating
 a woman ``of his same generation.''
 On \emph{Anderson Cooper 360} on CNN, various commenters said the 
-following\footnote{\url{https://archive.org/details/CNNW_20160926_000000_Anderson_Cooper_360}}
+following\footnote{\tiny https://archive.org/details/CNNW\_20160926\_000000\_Anderson\_Cooper\_360}
 
 \begin{exe}
   \ex Is he going to \emph{hit} back if \emph{attacked} tomorrow, or even if not \emph{attacked}?
@@ -408,13 +408,13 @@ following\footnote{\url{https://archive.org/details/CNNW_20160926_000000_Anderso
 \end{exe}
 
 The same broadcast mentions a Trump tweet that referenced Gennifer Flowers'
-affair with Bill Clinton\footnote{\url{https://archive.org/details/CNNW_20160926_000000_Anderson_Cooper_360/start/120/end/180}}. A commentator goes on to quote
+affair with Bill Clinton\footnote{\tiny https://archive.org/details/CNNW\_20160926\_000000\_Anderson\_Cooper\_360/start/120/end/180}. A commentator goes on to quote
 Jane Goodall, who said ``Trump debates like a chimp in a dominance ritual.''
 Cooper's guest explained that Trump ``is not just arguing, but intimidating'' his 
-opponents\footnote{\url{https://archive.org/details/CNNW_20160926_000000_Anderson_Cooper_360/start/3180/end/3240}}.''
+opponents\footnote{\tiny https://archive.org/details/CNNW\_20160926\_000000\_Anderson\_Cooper\_360/start/3180/end/3240}.''
 On Fox news, September 25, host Megyn Kelly and guests on \emph{The Kelly File} 
 weighed in on debate 
-strategy\footnote{\url{https://archive.org/details/FOXNEWSW_20160926_010000_The_Kelly_File}}:
+strategy\footnote{\tiny https://archive.org/details/FOXNEWSW\_20160926\_010000\_The\_Kelly\_File}:
 \begin{exe}
   \ex You have a column out saying she should get in his face and stay in his
     face \ldots put him in the pain locker and shake it around.
@@ -428,7 +428,7 @@ strategy\footnote{\url{https://archive.org/details/FOXNEWSW_20160926_010000_The_
 \end{exe}
 During a man-on-the-street segment on \emph{The O'Reilly Factor}, one 
 passerby said Clinton ``\emph{beat} the [bleep] out of Donald Trump. It was
-like a boxing match, Hillary hit him 1, 2, bing bing.''\footnote{\url{https://archive.org/details/FOXNEWSW_20160928_030000_The_OReilly_Factor/start/2940/end/3000}} 
+like a boxing match, Hillary hit him 1, 2, bing bing.''\footnote{\tiny https://archive.org/details/FOXNEWSW\_20160928\_030000\_The\_OReilly\_Factor/start/2940/end/3000} 
 
 In the closing minutes of the first 2016 debate, Hillary Clinton introduced the 
 story of former Miss Universe
@@ -443,13 +443,13 @@ next few days, to defend his negative view of Machado. A reporter on
 \emph{Anderson Cooper 360} cast Clinton's strategy as metaphorical violence 
 on September 27
 \begin{exe}
-  \ex The Clinton campaign had an ad ready to \emph{hit} Trump\footnote{\url{https://archive.org/details/CNNW_20160928_040000_Anderson_Cooper_360/start/1800/end/1860}}.
+  \ex The Clinton campaign had an ad ready to \emph{hit} Trump\footnote{\tiny https://archive.org/details/CNNW\_20160928\_040000\_Anderson\_Cooper\_360/start/1800/end/1860}.
 \end{exe}
 On the morning of September 30, in the third of
 a series of three tweets about Machado, Trump called 
-Machado ``disgusting'' and told readers to ``check out sex tape.''\footnote{\url{https://twitter.com/realdonaldtrump/status/781788223055994880}} 
+Machado ``disgusting'' and told readers to ``check out sex tape.''\footnote{\tiny https://twitter.com/realdonaldtrump/status/781788223055994880} 
 The following quotes from the September 30 episode
-of \emph{Erin Burnett OutFront}\footnote{\url{https://archive.org/details/CNNW_20160930_230000_Erin_Burnett_OutFront}} 
+of \emph{Erin Burnett OutFront}\footnote{\tiny https://archive.org/details/CNNW\_20160930\_230000\_Erin\_Burnett\_OutFront} 
 demonstrate how metaphorical violence was used
 to describe the exchange of words on this issue, and the candidates' 
 reactions and counter-reactions:
@@ -465,21 +465,21 @@ reactions and counter-reactions:
 \end{exe}
 Regarding Trump's tweets, Clinton herself asked at a campaign rally, ``Who
 gets up at three o'clock in the morning to engage in a Twitter \emph{attack} against
-a former Miss Universe?''\footnote{\url{https://archive.org/details/CNNW_20160930_230000_Erin_Burnett_OutFront/start/1020/end/1080}} 
+a former Miss Universe?''\footnote{\tiny https://archive.org/details/CNNW\_20160930\_230000\_Erin\_Burnett\_OutFront/start/1020/end/1080} 
 
 
 Two days before the second debate, October 7, the Washington Post published a video
 in which Trump brags that being famous enables him to 
-sexually assault women\footnote{\url{https://goo.gl/tk3ZNf}}. 
+sexually assault women\footnote{\tiny https://goo.gl/tk3ZNf}. 
 Trump apologized for those words in a video posted to Twitter that night
-\footnote{\url{https://twitter.com/realDonaldTrump/status/784609194234306560}} 
+\footnote{\tiny https://twitter.com/realDonaldTrump/status/784609194234306560} 
 Along with the apology in the same video, Trump accused, ``Bill Clinton has actually
 abused women, and Hillary has bullied, attacked, shamed, and 
 intimidated his victims,'' and
 foreshadowed ``we will discuss this more in the coming days. See you at the
 debate on Sunday.'' 
 Two quotes from a special edition of \emph{Last Word} illustrate the coverage
-of this threat using metaphorical violence\footnote{\url{https://archive.org/details/MSNBCW_20161008_100000_The_Rachel_Maddow_Show}; although the show
+of this threat using metaphorical violence\footnote{\tiny https://archive.org/details/MSNBCW\_20161008\_100000\_The\_Rachel\_Maddow\_Show; although the show
 ID says it's \emph{The Rachel Maddow Show}, but it is in fact 
 \emph{The Last Word with Lawrence O'Donnell}}. This is also further evidence that
 cable news uses metaphorical violence in their coverage of debate preparation
@@ -521,13 +521,13 @@ the press, and those who value prototypical American norms of behavior.
 % October 9 debate: ``In a notable exchange that was rehashed often 
 %     on cable news...'' Trump attacked on the Benghazi issue as a counterattack
 %     against Clinton's criticism that Trump was up at 3AM tweeting about 
-%     Ms. Universe. \footnote{\url{https://archive.org/details/FOXNEWSW_20161010_030000_The_Kelly_File}}
+%     Ms. Universe. \footnote{\tiny \url{https://archive.org/details/FOXNEWSW_20161010_030000_The_Kelly_File}}
 
 % October 10: Hillary says ``Donald Trump spent his time last night
 %     attacking me when he should have been apologizing.'' But even his 
 %     apologies don't appear to be real apologies, at least according to 
 %     Fox News. Another instance in explaining 
-%     this\footnote{\url{https://archive.org/details/FOXNEWSW_20161010_000000_The_OReilly_Factor}}
+%     this\footnote{\tiny \url{https://archive.org/details/FOXNEWSW_20161010_000000_The_OReilly_Factor}}
 
 
 On October 10, the day after the second debate, Donald Trump began criticizing Paul 
@@ -537,9 +537,9 @@ illegal immigration and not waste his time on fighting the Republican nominee.''
 Ryan had said he was ``sickened'' by Trump's comments and decided to cancel a
 scheduled joint appearance with Trump \cite{Fahrentold2016}.
 Trump would criticize the Speaker five more times in
-the next six days on Twitter\footnote{\url{https://www.thetrumparchive.com/?searchbox=\%22Paul+Ryan\%22&dates=\%5B\%222016-07-31\%22\%2C\%222016-11-30\%22\%5D}}.
+the next six days on Twitter\footnote{\tiny https://www.thetrumparchive.com/?searchbox=\%22Paul+Ryan\%22\&dates=\%5B\%222016-07-31\%22\%2C\%222016-11-30\%22\%5D}.
 All three networks reported on this exchange using metaphorical
-violence. Juan Williams said this on October 15 on \emph{The O'Reilly Factor}\footnote{\url{https://archive.org/details/FOXNEWSW_20161016_030000_The_OReilly_Factor/start/420/end/480}}:
+violence. Juan Williams said this on October 15 on \emph{The O'Reilly Factor}\footnote{\tiny https://archive.org/details/FOXNEWSW\_20161016\_030000\_The\_OReilly\_Factor/start/420/end/480}:
 
 \begin{exe}
   \ex That is something that Donald Trump is spending time on, attacking Paul
@@ -626,7 +626,7 @@ of metaphorical violence in both years.
 % \emph{New York Times} for ``launching
 % an attack like this so late in the game,'' referring to a story in the
 % \emph{Times} that told the stories of two women who claim they were 
-% sexually assaulted by Donald Trump?\footnote{\url{https://archive.org/details/CNNW_20161012_230000_Erin_Burnett_OutFront}}
+% sexually assaulted by Donald Trump?\footnote{\tiny \url{https://archive.org/details/CNNW_20161012_230000_Erin_Burnett_OutFront}}
 % As if to summarize all the issues on which each candidate ``attacked'' 
 % each other, \emph{OutFront} closed its October 10, 2016, episode 
 % discussing the Clinton campaign emails published by WikiLeaks. See
